# FastProjectiveSkinning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/armadillo/: armadillo.ini  armadillo.skel  armadillo0.anim  armadillo1.anim  armadillo2.anim  armadillo3.anim  armadillo_LR3.off
data/cylinder/: cylinder.ini  cylinder.off  cylinder.skel  cylinder0.anim
data/male/: male.ini  male.off  male.skel  male0.anim  male1.anim  male2.anim  male3.anim  male4.anim  male5.anim  male_LR20.off
data/tbone/: tbone.ini  tbone.off  tbone.skel  tbone0.anim  tbone1.anim
src/: Animator.cpp  Animator.h  CMakeLists.txt  Collisions.cpp  Collisions.h  Inverse_kinematics.cpp  Inverse_kinematics.h  PD_solver.cpp  PD_solver.h  PD_solver_cuda.cu  PD_solver_cuda.h  Shaders.h  Viewer_preparation.cpp  Viewer_preparation.h  Viewer_skinning.cpp  Viewer_skinning.h  defines.h  main.cpp
src/cuda_helper/: helper_cuda.h  helper_functions.h
src/mesh/: Bone.h  Helper.h  Joint.h  Mesh.cpp  Mesh.h  Skeleton.cpp  Skeleton.h
src/svd/: svd3.cu  svd3x3.cpp  svd3x3.h
