file(GLOB_RECURSE SOURCES *.cpp)
file(GLOB_RECURSE HEADERS *.h)
file(GLOB_RECURSE KERNELS *.cu)

if(DEFINED CMAKE_CUDA_COMPILER)
    add_executable(skinning ${HEADERS} ${SOURCES} ${KERNELS})
    set_target_properties(skinning PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
    set_target_properties(skinning PROPERTIES CUDA_ARCHITECTURES native)
    set_target_properties(skinning PROPERTIES LINK_FLAGS "/NODEFAULTLIB:LIBCMT.lib")
    target_link_libraries(skinning pmp_vis ${CUDA_LIBRARIES} ${OPENGL_LIBRARIES})
else()
    add_executable(skinning ${HEADERS} ${SOURCES})
    target_link_libraries(skinning pmp_vis ${OPENGL_LIBRARIES})
endif()
